Use PEP 517 for building if supported (8/10)

--- a/mingw-w64-mypy/PKGBUILD
+++ b/mingw-w64-mypy/PKGBUILD
@@ -7,14 +7,15 @@ pkgver=1.14.1
 pkgrel=1
 pkgdesc="Optional static typing for Python 3 (PEP484) (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://www.mypy-lang.org/"
+msys2_repository_url="https://github.com/python/mypy"
 msys2_references=(
   'pypi: mypy'
 )
-url="https://www.mypy-lang.org/"
-msys2_repository_url="https://github.com/python/mypy"
 license=('spdx:MIT')
 depends=(
+  "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-mypy_extensions"
   "${MINGW_PACKAGE_PREFIX}-python-typing_extensions"
 )
