--- a/mingw-w64-python-flake8/PKGBUILD
+++ b/mingw-w64-python-flake8/PKGBUILD
@@ -7,15 +7,16 @@ pkgver=7.1.1
 pkgrel=1
 pkgdesc="The modular source code checker: pep8, pyflakes and co (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://flake8.pycqa.org/"
+msys2_repository_url='https://github.com/PyCQA/flake8'
 msys2_references=(
   'archlinux: flake8'
   'pypi: flake8'
 )
-msys2_repository_url='https://github.com/PyCQA/flake8'
-url="https://flake8.pycqa.org/"
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-python-pyflakes"
+depends=("${MINGW_PACKAGE_PREFIX}-python"
+         "${MINGW_PACKAGE_PREFIX}-python-pyflakes"
          "${MINGW_PACKAGE_PREFIX}-python-mccabe"
          "${MINGW_PACKAGE_PREFIX}-python-pycodestyle")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
