--- a/mingw-w64-python-jupyter-nbviewer/PKGBUILD
+++ b/mingw-w64-python-jupyter-nbviewer/PKGBUILD
@@ -4,15 +4,16 @@ _realname=nbviewer
 pkgbase=mingw-w64-python-jupyter-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-jupyter-${_realname}
 pkgver=1.0.1
-pkgrel=6
+pkgrel=7
 pkgdesc='Render Jupyter Notebooks as static web pages (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url='https://jupyter.org'
+msys2_repository_url="https://github.com/jupyter/nbviewer"
 msys2_references=(
   'pypi: nbviewer'
 )
-url='https://jupyter.org'
-license=('BSD')
+license=('spdx:BSD-4-Clause')
 depends=(
     ${MINGW_PACKAGE_PREFIX}-python
     ${MINGW_PACKAGE_PREFIX}-python-elasticsearch
@@ -25,36 +26,28 @@ depends=(
     ${MINGW_PACKAGE_PREFIX}-python-statsd
 )
 makedepends=(
+    ${MINGW_PACKAGE_PREFIX}-python-build
+    ${MINGW_PACKAGE_PREFIX}-python-installer
     ${MINGW_PACKAGE_PREFIX}-python-setuptools
     ${MINGW_PACKAGE_PREFIX}-python-invoke
     ${MINGW_PACKAGE_PREFIX}-python-versioneer
 )
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/jupyter/${_realname}/archive/${pkgver}.tar.gz")
-sha256sums=('2fe0b0ee8ec5c8e2e173b8f15a22e42ba583fc6d4fa60ddb7aa40e9ee972f268')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('85233e53bc78ff216a99a2676a7e5f9557f0d4973797c36fdb81c9cc48821a73')
 
 prepare() {
   rm -f "${srcdir}"/${_realname}-${pkgver}/versioneer.py | true
-
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-
-  # Disable check for non-windows modules
-  sed -i "s|newrelic!=2.80.0.60||g" requirements.txt
-  sed -i "s|pylibmc||g" requirements.txt
-
-  ${MINGW_PREFIX}/bin/python setup.py build
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+  cd "${srcdir}"/python-build-${MSYSTEM}
 
-  install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
 }
