--- a/mingw-w64-yelp-tools/PKGBUILD
+++ b/mingw-w64-yelp-tools/PKGBUILD
@@ -7,9 +7,9 @@ pkgver=42.1
 pkgrel=1
 pkgdesc="Tools for creating Yelp documentation (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-license=('GPL')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.gnome.org"
+license=('GPL')
 depends=("intltool"
          "${MINGW_PACKAGE_PREFIX}-docbook-xsl"
          "${MINGW_PACKAGE_PREFIX}-libxml2"
